<resources>
    <string name="app_name">Prueba Sebastian B</string>
    <string name="title">Pokemons</string>
    <string name="remove_to_shopping_cart">Remove to shopping cart</string>
    <string name="add_to_shopping_cart">Add to shopping cart</string>
    <string name="view_details">View details</string>
    <string name="details">Details</string>
    <string name="details_name">Name: </string>
    <string name="details_weight">Weight: </string>
    <string name="details_height">Height: </string>
    <string name="details_abilities">Abilities: </string>
    <string name="details_moves">Moves: </string>
    <string name="details_types">Types: </string>
    <string name="shopping_cart">Shopping cart</string>
    <string name="remove_all_to_shopping_cart">Remove all items to shopping cart</string>
</resources>