<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.DetailsActivity">

    <TextView
        android:id="@+id/tvTitleDetails"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:text="@string/details"
        android:textSize="35sp"
        android:paddingStart="10dp"
        android:background="@color/blue"
        android:layout_marginBottom="10dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/sv_details"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvTitleDetails"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/ll_buttons"
        android:visibility="invisible">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvTitleDetails"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/image_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_name"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginStart="10sp"/>

                <TextView
                    android:id="@+id/details_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    tools:text="name"
                    android:layout_marginStart="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_height"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginStart="10sp"/>

                <TextView
                    android:id="@+id/details_height"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    tools:text="name"
                    android:layout_marginStart="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_weight"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginStart="10sp"/>

                <TextView
                    android:id="@+id/details_weight"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    tools:text="name"
                    android:layout_marginStart="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_abilities"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginStart="10sp"/>

                <TextView
                    android:id="@+id/details_abilities"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    tools:text="name"
                    android:layout_marginStart="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_types"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginStart="10sp"/>

                <TextView
                    android:id="@+id/details_types"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    tools:text="name"
                    android:layout_marginStart="10sp"/>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/details_moves"
                    android:textStyle="bold"
                    android:textSize="30sp"
                    android:layout_marginStart="10sp"/>

                <TextView
                    android:id="@+id/details_moves"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textSize="30sp"
                    tools:text="name"
                    android:layout_marginStart="10sp"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <ProgressBar
        android:id="@+id/detailsProgressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_weight="1" />

    <ImageButton
        android:id="@+id/details_close"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:src="@drawable/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:id="@+id/ll_buttons"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2"
        android:visibility="invisible"
        android:background="@color/gray"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/add"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="2dp"
            android:backgroundTint="@color/green"
            android:textColor="@color/black"
            android:text="@string/add_to_shopping_cart" />

        <Button
            android:id="@+id/remove"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:text="@string/remove_to_shopping_cart"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_marginEnd="4dp"
            android:textColor="@color/black"
            android:backgroundTint="@color/red"
            />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>